--- a/app/src/main/res/layout/activity_lista_pacotes.xml
+++ b/app/src/main/res/layout/activity_lista_pacotes.xml
@@ -4,53 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.ListaPacotesActivity">
+    android:contentDescription="@string/conteudo_do_banner_inicial">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/lista_pacotes_banner_inicial"
         android:layout_width="0dp"
         android:layout_height="120dp"
+        android:contentDescription="@string/conteudo_do_banner_inicial"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:color/holo_purple" />
+
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/lista_pacotes_especiais"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="Especiais"
+        android:text="@string/especiais"
         android:textColor="@android:color/white"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/lista_pacotes_banner_inicial"
+        app:layout_constraintEnd_toEndOf="@id/lista_pacotes_banner_inicial"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="@id/lista_pacotes_banner_inicial"
+        app:layout_constraintTop_toTopOf="@id/lista_pacotes_banner_inicial"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/lista_pacotes_pais"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Brasil"
+        android:text="@string/pais"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="@+id/lista_pacotes_especiais"
+        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_especiais" />
 
-    <ListView android:id="@+id/lista_pacotes_listview"
+    <ListView
+        android:id="@+id/lista_pacotes_listview"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_pacote"
-        app:layout_constraintStart_toStartOf="parent"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lista_pacotes_banner_inicial"
+        tools:listitem="@layout/item_pacote" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
