--- a/app/src/main/res/layout/activity_resumo_pacote.xml
+++ b/app/src/main/res/layout/activity_resumo_pacote.xml
@@ -41,21 +41,24 @@
 
     <TextView
         android:id="@+id/resumo_pacote_data"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/resumo_pacote_preco"
         app:layout_constraintStart_toStartOf="@+id/resumo_pacote_dias"
         app:layout_constraintTop_toBottomOf="@+id/resumo_pacote_dias"
         tools:text="08/12 - 10/12 de 2017" />
 
     <TextView
         android:id="@+id/resumo_pacote_preco"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:textAlignment="textEnd"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/resumo_pacote_data"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/resumo_pacote_data"
         tools:text="R$ 243,99" />
 
     <TextView
